stop popup: improve, make it easier to alternate between overlapping stops

--- a/busstops/static/css/_base.scss
+++ b/busstops/static/css/_base.scss
@@ -1333,6 +1333,7 @@ nav {
 }
 
 body.has-overlay {
+    position: relative;  // https://stackoverflow.com/questions/3047337/does-overflowhidden-applied-to-body-work-on-iphone-safari
     overflow: hidden;
 
     // services_header
