--- a/busstops/static/js/src/maps.css
+++ b/busstops/static/js/src/maps.css
@@ -85,7 +85,7 @@ a.link-with-smalls:hover .description {
 
 .link-with-smalls .smalls {
   color: var(--text-color);
-  font-size: 0.75em;
+  font-size: 0.85em;
 }
 
 /* !!!!!!!  */
